--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ h2 > a:hover {
 }
 
 h3 {
+    padding: 0px 20px 0px 20px;
     font-size: 28px;
 }
 
@@ -300,7 +301,7 @@ footer > div {
 /* Mobile View (max-width: 767px) */
 @media screen and (max-width: 767px) {
     body {
-        padding: 10px;
+        padding: none;
     }
 
     .box {
